--- a/PL/Views/Producto/GetAll.cshtml
+++ b/PL/Views/Producto/GetAll.cshtml
@@ -28,7 +28,38 @@
 
             <hr />
 
-            <div class="row text-end">
+            <div class="row mb-3">
+                <div class="col-md-4">
+                    <a><input type="submit" value="Busqueda" class="btn btn-info col-md-12" id="busqueda" /></a>
+                </div>
+            </div>
+
+            <form asp-controller="Producto" asp-action="GetAll" method="post" enctype="multipart/form-data">
+
+
+                <div class="row mb-3 align-items-center" id="fuBusqueda" style="display:none;">
+                    <div class="col-auto">
+                        @Html.DropDownListFor(model => model.Departamento.Area.IdArea, new SelectList(Model.Departamento.Area.Areas, "IdArea", "Nombre"), "Seleccione un Area", htmlAttributes: new { id = "ddlArea", @class = "form-control" })
+                    </div>
+                    <div class="col-auto">
+                        @if (Model.Departamento.Departamentos == null)
+                        {
+                            @Html.DropDownListFor(model => model.Departamento.IdDepartamento, new SelectList(string.Empty, "Value", "Text"), "Selecciona un Departamento", htmlAttributes: new { id = "ddlDepartamento", @class = "form-control" })
+                        }
+                        else
+                        {
+                            @Html.DropDownListFor(model => model.Departamento.IdDepartamento, new SelectList(Model.Departamento.Departamentos, "IdDepartamento", "Nombre"), "Selecciona un Departamento", htmlAttributes: new { id = "ddlDepartamento", @class = "form-control" })
+                        }
+                    </div>
+                    <div class="col-md-2">
+                        @*@Html.ActionLink(" Busqueda Abierta", "GetAll2", "Usuario", new { area = "" }, new { @class = "btn btn-info" })*@
+                        <a><input type="submit" data-toggle="modal" class="btn btn-info" value="Buscar" /></a>
+                    </div>
+                </div>
+
+            </form>
+
+            <div class="row mb-4 text-end">
                 <div class="col-md-12">
                     <a class="btn btn-success" href="@Url.Action("Form","Producto")">Agregar</a>
                 </div>
@@ -46,7 +77,8 @@
                                 <th class="text-center">Precio Unitario</th>
                                 <th class="text-center">Stock</th>
                                 <th class="text-center">Proveedor</th>
-                                <th class="text-center">Departamneto</th>
+                                <th class="text-center">Area</th>
+                                <th class="text-center">Departamento</th>
                                 <th class="text-center">Descripcion</th>
                                 <th class="text-center">Imagen</th>
                                 <th class="text-center">Eliminar</th>
@@ -62,8 +94,9 @@
                                     <td>@producto.Nombre</td>
                                     <td>@producto.PrecioUnitario</td>
                                     <td>@producto.Stock</td>
-                                    <td>@producto.Proveedor</td>
-                                    <td>@producto.Departamento</td>
+                                    <td>@producto.Proveedor.Nombre</td>
+                                    <td>@producto.Departamento.Area.Nombre</td>
+                                    <td>@producto.Departamento.Nombre</td>
                                     <td>@producto.Descripcion</td>
                                     <td>
                                         @if (producto.Imagen == null)
@@ -327,6 +360,81 @@
         }
     }
 </div>
+
+<script src="~/lib/jquery/dist/jquery.min.js"></script>
+<link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+
+<link rel="stylesheet" href="https://cdn.datatables.net/1.13.6/css/jquery.dataTables.css" />
+<script src="https://cdn.datatables.net/1.13.6/js/jquery.dataTables.js"></script>
+
+<script type="text/javascript">
+
+    jQuery(document).ready(function ($) {
+        $("#myTable").DataTable();
+    });
+
+    
+
+    $('#busqueda').click(function () {
+        $('#fuBusqueda').toggle('slow', function () {
+        });
+    });
+
+    $(document).ready(function () {
+        var area = $('#ddlArea').val();
+        if (area == 0) {
+            
+        } else {
+            $("#ddlDepartamento").empty();
+
+            $.ajax({
+                type: 'POST',
+                url: '@Url.Action("GetDepartamento")',
+                dataType: 'json',
+                data: { IdArea: $("#ddlArea").val() },
+                success: function (departamentos) {
+                    $("#ddlDepartamento").append('<option value="0">' + 'Seleccione un Departamento' + '</option>');
+                    $.each(departamentos, function (i, departamentos) {
+                        $("#ddlDepartamento").append('<option value="'
+                            + departamentos.idDepartamento + '">'
+                            + departamentos.nombre + '</option>');
+                    });
+                },
+                error: function (ex) {
+                    alert('Failed.' + ex);
+                }
+            });
+        }
+    });
+
+
+    $(document).ready(function () {
+        $("#ddlArea").change(function () {
+
+            $("#ddlDepartamento").empty();
+
+            $.ajax({
+                type: 'POST',
+                url: '@Url.Action("GetDepartamento")',
+                dataType: 'json',
+                data: { IdArea: $("#ddlArea").val() },
+                success: function (departamentos) {
+                    $("#ddlDepartamento").append('<option value="0">' + 'Seleccione un Departamento' + '</option>');
+                    $.each(departamentos, function (i, departamentos) {
+                        $("#ddlDepartamento").append('<option value="'
+                            + departamentos.idDepartamento + '">'
+                            + departamentos.nombre + '</option>');
+                    });
+                },
+                error: function (ex) {
+                    alert('Failed.' + ex);
+                }
+            });
+        });
+    });
+
+</script>
 
 <style>
     @@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap");
