--- a/PL/Views/Shared/_Layout.cshtml
+++ b/PL/Views/Shared/_Layout.cshtml
@@ -34,10 +34,10 @@
                                 <li class="nav-item">
                                     <a class="nav-link text-dark" asp-area="" asp-controller="Rol" asp-action="GetAll">Roles</a>
                                 </li>
-                                @* <li class="nav-item">
-                                    <a class="nav-link text-dark" asp-area="" asp-controller="Sucursal" asp-action="GetAll">Sucursal</a>
-                                </li>
                                 <li class="nav-item">
+                                    <a class="nav-link text-dark" asp-area="" asp-controller="Departamento" asp-action="GetAll">Departamento</a>
+                                </li>
+                                @* <li class="nav-item">
                                     <a class="nav-link text-dark" asp-area="" asp-controller="SucursalProducto" asp-action="SucursalDDLGetAll">Sucursal Producto</a>
                                 </li>
                                 <li class="nav-item">
