--- a/PL/Views/Shared/_Layout.cshtml
+++ b/PL/Views/Shared/_Layout.cshtml
@@ -29,6 +29,9 @@
                         {
                             <ul class="navbar-nav flex-grow-1">
                                 <li class="nav-item">
+                                    <a class="nav-link text-dark" asp-area="" asp-controller="Venta" asp-action="ProductoGetAll">Inicio</a>
+                                </li>
+                                <li class="nav-item">
                                     <a class="nav-link text-dark" asp-area="" asp-controller="Producto" asp-action="GetAll">Productos</a>
                                 </li>
                                 <li class="nav-item">
@@ -37,10 +40,8 @@
                                 <li class="nav-item">
                                     <a class="nav-link text-dark" asp-area="" asp-controller="Departamento" asp-action="GetAll">Departamento</a>
                                 </li>
+                                
                                 @* <li class="nav-item">
-                                    <a class="nav-link text-dark" asp-area="" asp-controller="SucursalProducto" asp-action="SucursalDDLGetAll">Sucursal Producto</a>
-                                </li>
-                                <li class="nav-item">
                                     <a class="nav-link text-dark" asp-area="" asp-controller="Venta" asp-action="DeptoAreaDDL">Venta</a>
                                 </li>
                                 <li class="nav-item">
@@ -48,7 +49,7 @@
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link text-dark" asp-area="" asp-controller="Historial" asp-action="GetAllProductosIdUsuario">Historial</a>
-                                </li> *@
+                                </li>  *@ 
                             </ul>
                         }
                         else
