--- a/PL/Views/Shared/_Layout.cshtml
+++ b/PL/Views/Shared/_Layout.cshtml
@@ -16,7 +16,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">PL</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">E-Commerce</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -39,15 +39,14 @@
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link text-dark" asp-area="" asp-controller="Departamento" asp-action="GetAll">Departamento</a>
+                                </li>                               
+                                <li class="nav-item">
+                                    <a class="nav-link text-dark" asp-area="" asp-controller="Venta" asp-action="Carrito">Carrito</a>
                                 </li>
-                                
                                 @* <li class="nav-item">
-                                    <a class="nav-link text-dark" asp-area="" asp-controller="Venta" asp-action="DeptoAreaDDL">Venta</a>
-                                </li>
-                                <li class="nav-item">
                                     <a class="nav-link text-dark" asp-area="" asp-controller="Venta" asp-action="ProductosCarrito">Carrito</a>
-                                </li>
-                                <li class="nav-item">
+                                </li> *@
+                                @*<li class="nav-item">
                                     <a class="nav-link text-dark" asp-area="" asp-controller="Historial" asp-action="GetAllProductosIdUsuario">Historial</a>
                                 </li>  *@ 
                             </ul>
@@ -58,12 +57,12 @@
                             {
                                 <ul class="navbar-nav flex-grow-1">
                                     <li class="nav-item">
-                                        <a class="nav-link text-dark" asp-area="" asp-controller="Producto" asp-action="GetAll">Productos</a>
-                                    </li>
-                                    @* <li class="nav-item">
-                                        <a class="nav-link text-dark" asp-area="" asp-controller="Venta" asp-action="ProductosCarrito">Carrito</a>
+                                        <a class="nav-link text-dark" asp-area="" asp-controller="Venta" asp-action="ProductoGetAll">Inicio</a>
                                     </li>
                                     <li class="nav-item">
+                                        <a class="nav-link text-dark" asp-area="" asp-controller="Venta" asp-action="Carrito">Carrito</a>
+                                    </li>
+                                    @*<li class="nav-item">
                                         <a class="nav-link text-dark" asp-area="" asp-controller="Historial" asp-action="GetAllProductosIdUsuario">Historial</a>
                                     </li> *@
                                 </ul>
@@ -76,7 +75,7 @@
                     {
                         <ul class="navbar-nav flex-grow-1">
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Producto" asp-action="GetAll">Productos</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Venta" asp-action="ProductoGetAll">Inicio</a>
                             </li>
                         </ul>
                     }
