--- a/PL/Views/Departamento/Form.cshtml
+++ b/PL/Views/Departamento/Form.cshtml
@@ -34,8 +34,9 @@
             <div class="row mb-3">                            
                 <div class="col-md-3">
                     @Html.LabelFor(model => model.Nombre)
-                    @Html.TextBoxFor(model => model.Nombre, new { @class = "form-control", @id = "txtNombre" })
+                    @Html.TextBoxFor(model => model.Nombre, new { @class = "form-control", @id = "txtNombre", @onkeypress = "return SoloLetras(event, 'lblNombre')", @onblur = "Empty('lblNombre')"})
                     @Html.ValidationMessageFor(model => model.Nombre)
+                    <label id="lblNombre"></label>
                 </div>
                 <div class="col-md-3">
                     @Html.LabelFor(model => model.Area)
@@ -55,6 +56,40 @@
 
     </div>
 </div>
+
+<script type="text/javascript">
+
+    function SoloLetras(event, controlId) {
+        var letra = event.key;
+        var reGex = /^[a-zA-Z ]+$/;
+
+        if (reGex.test(letra)) {
+            $('#' + controlId).text("")
+            return true
+        }
+        else {
+            $('#' + controlId).text("Solo se permiten letras")
+            $('#' + controlId).css({ "color": "red" });
+
+            return false
+        }
+    }
+
+    function Empty(controlId) {
+        var letra = event.key;
+
+        if (!this.value) {
+            $('#' + controlId).text("Se necesita llenar este campo")
+            $('#' + controlId).css({ "color": "red" });
+            return true
+        }
+        else {
+            $('#' + controlId).text("")
+
+            return false
+        }
+    }
+</script>
 
  
 
