--- a/PL/Views/Shared/_Layout.cshtml
+++ b/PL/Views/Shared/_Layout.cshtml
@@ -8,15 +8,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - PL</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/zephyr.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/PL.styles.css" asp-append-version="true" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+        <nav class="navbar navbar-expand-lg bg-primary navbar-expand-sm navbar-toggleable-sm border-bottom box-shadow mb-3">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">E-Commerce</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Venta" asp-action="ProductoGetAll">E-Commerce</a>
+                @* <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button> *@
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -27,21 +30,21 @@
                     {
                         if (User.IsInRole("Administrador"))
                         {
-                            <ul class="navbar-nav flex-grow-1">
+                            <ul class="navbar-nav flex-grow-1 me-auto">
                                 <li class="nav-item">
-                                    <a class="nav-link text-dark" asp-area="" asp-controller="Venta" asp-action="ProductoGetAll">Inicio</a>
+                                    <a class="nav-link" asp-area="" asp-controller="Venta" asp-action="ProductoGetAll">Inicio</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link text-dark" asp-area="" asp-controller="Producto" asp-action="GetAll">Productos</a>
+                                    <a class="nav-link" asp-area="" asp-controller="Producto" asp-action="GetAll">Productos</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link text-dark" asp-area="" asp-controller="Rol" asp-action="GetAll">Roles</a>
+                                    <a class="nav-link" asp-area="" asp-controller="Rol" asp-action="GetAll">Roles</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link text-dark" asp-area="" asp-controller="Departamento" asp-action="GetAll">Departamento</a>
+                                    <a class="nav-link" asp-area="" asp-controller="Departamento" asp-action="GetAll">Departamento</a>
                                 </li>                               
                                 <li class="nav-item">
-                                    <a class="nav-link text-dark" asp-area="" asp-controller="Venta" asp-action="Carrito">Carrito</a>
+                                    <a class="nav-link" asp-area="" asp-controller="Venta" asp-action="Carrito">Carrito</a>
                                 </li>
                                 @* <li class="nav-item">
                                     <a class="nav-link text-dark" asp-area="" asp-controller="Venta" asp-action="ProductosCarrito">Carrito</a>
@@ -55,12 +58,12 @@
                         {
                             if (User.IsInRole("Usuario"))
                             {
-                                <ul class="navbar-nav flex-grow-1">
+                                <ul class="navbar-nav flex-grow-1 me-auto">
                                     <li class="nav-item">
-                                        <a class="nav-link text-dark" asp-area="" asp-controller="Venta" asp-action="ProductoGetAll">Inicio</a>
+                                        <a class="nav-link" asp-area="" asp-controller="Venta" asp-action="ProductoGetAll">Inicio</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link text-dark" asp-area="" asp-controller="Venta" asp-action="Carrito">Carrito</a>
+                                        <a class="nav-link" asp-area="" asp-controller="Venta" asp-action="Carrito">Carrito</a>
                                     </li>
                                     @*<li class="nav-item">
                                         <a class="nav-link text-dark" asp-area="" asp-controller="Historial" asp-action="GetAllProductosIdUsuario">Historial</a>
@@ -73,9 +76,9 @@
                     }
                     else
                     {
-                        <ul class="navbar-nav flex-grow-1">
+                        <ul class="navbar-nav flex-grow-1 me-auto">
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Venta" asp-action="ProductoGetAll">Inicio</a>
+                                <a class="nav-link" asp-area="" asp-controller="Venta" asp-action="ProductoGetAll">Inicio</a>
                             </li>
                         </ul>
                     }
@@ -91,11 +94,11 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
+    @* <footer class="border-top footer text-muted">
         <div class="container">
             &copy; 2023 - PL - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
-    </footer>
+    </footer> *@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
